--- a/wp-content/themes/EssentialHospitals/css/membernetwork.css
+++ b/wp-content/themes/EssentialHospitals/css/membernetwork.css
@@ -72,9 +72,10 @@
 		#membercontent.group{}
 			#membercontent.group .gutter{padding:8px 0px;}
 
-	.group-resources, .group-details, .group-members{float:left;}
+	.group-resources, .group-details, .group-members, .prof-edit{float:left;}
 	.group-details{width:540px;padding:0 6px 0 8px;border-right:1px solid #e9e9e9;}
 		.group-details .gutter{padding:50px;}
+	 .prof-edit{width:823px;padding:0 6px 0 8px;border-right:none;}	
 
 		
 	.group-members{width:265px;padding:0 6px 0 8px;border-left:1px solid #e1e1e1;border-right:1px solid #e9e9e9;}
